# AudioUnit

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/tyl/audiounit/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/tyl/audiounit/: MainActivity.kt  OpenSLAudioActivity.kt
app/src/main/java/com/tyl/audiounit/ui/: ComposeItem.kt
app/src/main/java/com/tyl/audiounit/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/tyl/audiounit/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
modules/openSL/: build.gradle
modules/openSL/src/androidTest/java/com/tyl/opensl/: ExampleInstrumentedTest.kt
modules/openSL/src/main/cpp/: CMakeLists.txt
modules/openSL/src/main/cpp/imp/: Audio.cpp  AudioOpenSLJni.cpp  audio_common.cpp  audio_debug_utils.cpp  audio_effect.cpp  audio_player.cpp  buf_manager.cpp
modules/openSL/src/main/cpp/include/: Audio.h  audio_buf_manager.h  audio_common.h  audio_debug.h  audio_debug_utils.cpp  audio_debug_utils.h  audio_effect.h  audio_player.h  jni_interface.h  openSL.h
modules/openSL/src/main/java/com/tyl/opensl/: AudioOpenSLJava.java  AudioOpenSLKotlin.kt
modules/openSL/src/test/java/com/tyl/opensl/: ExampleUnitTest.kt
